Rewrite migration section